kernel/atomgit/mm_vmstat_ 修复 W=1 clang 编译器枚举类型转换警告.txt
#标题
mm/vmstat: 修复 W=1 clang 编译器枚举类型转换警告

#内核版本
OLK-6.6

#问题现象
在使用 clang 编译器并开启 W=1 编译选项构建内核时，编译过程因报错而中断。

#主要错误日志
./include/linux/vmstat.h:518:36: error: arithmetic between different enumeration types ('enum node_stat_item' and 'enum lru_list') [-Werror,-Wenum-enum-conversion]
  518 |         return node_stat_name(NR_LRU_BASE + lru) + 3; // skip "nr_"
      |                               ~~~~~~~~~~~ ^ ~~~

#问题根因
在 `lru_list_name` 函数中，表达式 `NR_LRU_BASE + lru` 的两个操作数属于不同的枚举类型（分别为 `enum node_stat_item` 和 `enum lru_list`）。Clang 编译器在 W=1 选项下会检测并将此算术运算视为错误，导致编译失败。

#解决方案
在 `include/linux/vmstat.h` 文件的 `lru_list_name` 函数中，将变量 `lru` 显式强制转换为 `enum node_stat_item` 类型，使运算符两边的枚举类型保持一致，从而消除编译器警告。

#来源
https://atomgit.com/openeuler/kernel/commit/21f90bc847400193fc030381403d661035ace40a